libcxx/test/std/utilities/expected/expected.helpers/variant_alternative.verify.cpp
//===----------------------------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
//===----------------------------------------------------------------------===//

// UNSUPPORTED: c++03, c++11, c++14, c++17, c++20, c++23

// <expected>

// template <size_t I, class T> struct variant_alternative; // undefined
// template <size_t I, class T> struct variant_alternative<I, const T>;
// template <size_t I, class T> struct variant_alternative<I, volatile T>;
// template <size_t I, class T> struct variant_alternative<I, const volatile T>;
// template <size_t I, class T>
//   using variant_alternative_t = typename variant_alternative<I, T>::type;
//
// template <size_t I, class T, class E>
//    struct variant_alternative<I, expected<T, E>>;

#include <memory>
#include <type_traits>
#include <expected>

int main(int, char**) {
    using E = std::expected<int, int>;
    std::variant_alternative<2, E>::type foo;  // expected-error@expected:* {{Index out of bounds in std::variant_alternative<>}}

  return 0;
}
